<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable name="model" type="com.example.imagebank.ui.main.search.SearchViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:bindScrollChangeListener="@{model.scrollListener}"
                android:fillViewport="true"
        >

            <LinearLayout
                    android:id="@+id/scroll_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"
                    android:orientation="vertical"
                    android:clipChildren="false"
                    android:clipToPadding="false"
            >

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                >
                    <EditText
                            android:id="@+id/keyword"
                            android:layout_width="0dp" android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/search"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:hint="@string/search_search"
                            tools:ignore="Autofill"
                            android:textSize="@dimen/sp20"
                            android:padding="@dimen/dp10"
                            android:layout_margin="@dimen/dp15"
                            android:background="@drawable/shape_rectangle_gray_background"
                            android:text="@={model.keyword}"
                            app:bindEditorAction="@{model.editorAction}"
                            android:focusableInTouchMode="true"
                    />

                    <ImageView
                            android:id="@+id/search"
                            android:layout_width="wrap_content" android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@+id/keyword"
                            android:src="@drawable/ic_search_black_24dp"
                            android:layout_marginStart="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp15"
                            android:layout_marginEnd="@dimen/dp15"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/cd_search_search_icon"
                            android:onClick="@{() -> model.search(1)}"
                    />

                    <TextView
                            android:id="@+id/sort"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/keyword"
                            android:text="@{model.sort}"
                            android:padding="@dimen/dp10"
                            android:onClick="@{() -> model.toggleSort()}"
                            android:visibility="@{model.items.size > 0 ? View.VISIBLE : View.GONE}"
                    />

                    <TextView
                            android:id="@+id/total_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/keyword"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:text="@{model.totalCount}"
                            android:padding="@dimen/dp10"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/keyword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:descendantFocusability="blocksDescendants"
                        android:nestedScrollingEnabled="false"
                        app:bindAdapter="@{model.adapter}"
                        app:bindItems="@{model.items}"
                />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/await_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="@{model.items.size > 0 ? View.GONE : View.VISIBLE}"
                app:layout_constraintVertical_bias="0.5"
        >
            <ImageView
                    android:id="@+id/await_icon"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/bg_await"
                    android:contentDescription="@string/cd_search_empty_list_icon"
            />

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/await_icon"
                    android:text="@string/search_empty_list"
                    android:layout_marginTop="@dimen/dp5"
                    android:textColor="#C2C2C2"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="@{model.visibleProgress}"
        />

        <ImageView
                android:id="@+id/move_top_scroll"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_arrow_drop_up_black_24dp"
                android:visibility="@{model.visibleTopScroll}"
                android:onClick="@{() -> model.command(model.CMD_TOP_SCROLL)}"
                android:elevation="2dp"
                android:padding="@dimen/dp5"
                android:layout_margin="@dimen/dp16"
                android:contentDescription="@string/cd_search_move_to_top"
                android:background="@drawable/shape_circle_yellow_stroke_background"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

