<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="item" type="com.example.imagebank.model.remote.entity.KakaoSearchResult"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dibs_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_gray_stroke_white_background"
            android:layout_margin="@dimen/dp5"
    >

        <ImageView
                android:id="@+id/dibs_item_image"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cd_dips_image_thumbnail"
                app:bindImage="@{item.thumbnail}"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
