<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.example.imagebank.ui.main.search.SearchViewModel" />
        <variable name="item" type="com.example.imagebank.model.remote.entity.KakaoSearchResult"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_gray_stroke_white_background"
            android:layout_margin="@dimen/dp5"
            android:onClick="@{() -> model.command(model.CMD_SHOW_DETAIL, item)}"
            android:clipChildren="false"
            android:clipToPadding="false"
    >

        <ImageView
                android:id="@+id/search_item_image"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cd_search_image_searched_image"
                app:bindImage="@{item.thumbnail}"
                />

        <ImageView
                android:id="@+id/search_item_dibs"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/dp10"
                android:contentDescription="@string/cd_search_dibs_icon"
                android:src="@{item.dibs}"
                android:onClick="@{() -> model.command(model.CMD_ANIM_STAR, item)}"
                app:bindToLargeAlpha="@{item.anim}"
        />
        <!--android:src="@{item.dibs ? @drawable/ic_star_yellow_24dp : @drawable/ic_star_border_yellow_24dp}"-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
