...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dibs_contents_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants">

                <brigitte.widget.viewpager.WrapContentViewPager
                        android:id="@+id/dibs_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:bindBannerAdapter="@{bannerModel.adapter}"
...
