...
            android:id="@+id/some_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bindScrollChangeListener="@{model.scrollListener}">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/some_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <brigitte.widget.viewpager.WrapContentViewPager
                    android:id="@+id/some_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:bindBannerAdapter="@{bannerModel.adapter}"
...
