...
                            android:layout_height="wrap_content">

                        <ImageView
                                android:id="@+id/menu"
                                android:layout_width="wrap_content" android:layout_height="0dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/tabs"
                                app:layout_constraintBottom_toBottomOf="@+id/tabs"
                                android:src="@drawable/ic_menu_white_24dp"
                                android:background="?selectableItemBackground"
                                android:paddingStart="@dimen/dp15"
                                android:paddingEnd="@dimen/dp15"
                                android:contentDescription="@string/cd_main_menu"
...
